--- a/src/css/register.css
+++ b/src/css/register.css
@@ -1,88 +1,31 @@
-@charset "utf-8";
-@import url("framework.css");
-
-/* Rows
---------------------------------------------------------------------------------------------------------------- */
-.row1, .row1 a{}
-
-/* Header
---------------------------------------------------------------------------------------------------------------- */
-#header{}
-
-#header #logo{margin-top:15px;}
-#header #logo *{margin:0; padding:0; line-height:1;}
-#header #logo h1{font-size:32px; font-variant:small-caps;}
-#header #logo p{font-size:12px; text-transform:lowercase;}
-
-/* Transition Fade
---------------------------------------------------------------------------------------------------------------- */
-*, *::before, *::after{transition:all .3s ease-in-out;}
-
-/* Colours
---------------------------------------------------------------------------------------------------------------- */
-body{color:#FFFFFF; background-color:#FFFFFF;}
-a{color:#A3D044;}
-a:active, a:focus{background:transparent;}/* IE10 + 11 Bugfix - prevents grey background */
-/*hr, .borderedbox{border-color:#D7D7D7;}
-label span{color:#FF0000; background-color:inherit;}
-input:focus, textarea:focus, *:required:focus{border-color:#A3D044;}
-.overlay{color:#FFFFFF; background-color:inherit;}
-.overlay::after{color:inherit; background-color:rgba(0,0,0,.55); background-image:url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAABhJREFUeNpiYGBgePz//38GRhABAgABBgBFTAbfCBNE2AAAAABJRU5ErkJggg==");}
-
-.btn, .btn.inverse:hover{color:#FFFFFF; background-color:#A3D044; border-color:#A3D044;}
-.btn:hover, .btn.inverse{color:inherit; background-color:transparent; border-color:inherit;}*/
-
-/* Rows */
-.row1{color:#FFFFFF; background-color:#252525;}
-/*.row2{color:#141414; background-color:#F3F3F3;}
-.row3{color:#141414; background-color:#FFFFFF;}
-.row4{color:#7F7F7F; background-color:#252525;}
-.row5, .row5 a{color:#7F7F7F; background-color:#141414;}*/
-
-/* Header */
-#header #logo h1 a{color:inherit; background-color:inherit;}
-
-
-/* Content Area */
-/*.cta article .heading a{color:inherit;}
-.cta article:hover .heading a{color:#A3D044;}
-.cta article .numb{color:rgba(0,0,0,.1);}
-.cta article:hover .numb{text-shadow:1px 1px rgba(0,0,0,.8);}
-
-.services article{border-color:#D7D7D7;}
-.services article:hover{color:#FFFFFF; background-color:#A3D044; border-color:#A3D044; box-shadow:5px 5px 0px rgba(0,0,0,.2);}
-.services article:hover a{color:inherit; text-shadow:1px 1px rgba(0,0,0,.4);}*/
-
-
-@-ms-viewport{width:device-width;}
-
-/* Max Wrapper Width - Laptop, Desktop etc.
---------------------------------------------------------------------------------------------------------------- */
-@media screen and (min-width:978px){
-	.hoc{max-width:1000px;}
+@font-face {
+	font-family: defaultFont;
+	src: url("../fonts/THSarabunNew.ttf");
 }
 
-
-/* Mobile Devices
---------------------------------------------------------------------------------------------------------------- */
-@media screen and (max-width:900px){
-	.hoc{max-width:90%;}
-
-	#header{padding:30px 0;}
-	#header #logo{margin:0;}
-
-	/*.container{}*/
+body {
+	font-family: defaultFont;
+	margin: 0 auto;
+	padding: 0;
+	font-size: 20px;
 }
 
-@media screen and (max-width:750px){
-	/*.imgl, .imgr{display:inline-block; float:none; margin:0 0 10px 0;}*/
-	.fl_left, .fl_right{display:block; float:none;}
-/*	.one_half, .one_third, .two_third, .one_quarter, .two_quarter, .three_quarter{display:block; float:none; width:auto; margin:0 0 30px 0; padding:0;}*/
-
-	#header{text-align:center;}
-	#header #logo{margin:0 0 30px 0;}
-
-	
-	/*.container, #footer{padding-bottom:50px;}/* Not neccessary - just looks better */
+.row1 {
+	color: #fff!important;
+	background-color: #4a4a4a!important;
+	height:90px;
+	width: 100%;
 }
-
+.header_left{
+	float:left;
+	margin-left:1.2em;
+	line-height: 0.5;
+	justify-content: center;
+}
+.header_left h1{
+	font-family: Georgia, 'Times New Roman', Times, serif;
+	font-size: 34px;
+}
+.header_left p {
+	font-size: 20px;
+}
