--- a/src/css/register.css
+++ b/src/css/register.css
@@ -8,6 +8,7 @@ body {
 	margin: 0 auto;
 	padding: 0;
 	font-size: 20px;
+	color: #4a4a4a;
 }
 
 .row1 {
@@ -15,10 +16,11 @@ body {
 	background-color: #4a4a4a!important;
 	height:90px;
 	width: 100%;
+	box-shadow: 6px 0px 10px grey;
 }
 .header_left{
 	float:left;
-	margin-left:1.2em;
+	margin-left:1.5em;
 	line-height: 0.5;
 	justify-content: center;
 }
@@ -29,3 +31,43 @@ body {
 .header_left p {
 	font-size: 20px;
 }
+#apply{
+	margin-left: 2.5em;
+}
+.col-left{
+	float: left;
+	width: 45%;
+	margin-left: 1em;
+	font-size: 25px;
+}
+.col-right{
+	float: right;
+	width: 50%;
+	font-size: 25px;
+	background-color: red;
+}
+input{
+	width: 350px;
+    padding: 5px 10px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+	box-sizing: border-box;
+	font-family: defaultFont;
+	font-size: 25px;
+	margin-left: 10px;
+}
+input:focus{
+    outline: none !important;
+    border-color: #fed42f;
+    box-shadow: 0 0 5px #fed42f;
+}
+.col-left table{
+	width: 100%;
+	padding: 10px;
+}
+.label{
+	text-align: right;
+}
+
