--- a/src/css/register.css
+++ b/src/css/register.css
@@ -14,60 +14,144 @@ body {
 .row1 {
 	color: #fff!important;
 	background-color: #4a4a4a!important;
-	height:90px;
+	height: 90px;
 	width: 100%;
 	box-shadow: 6px 0px 10px grey;
 }
-.header_left{
-	float:left;
-	margin-left:1.5em;
+
+.header_left {
+	float: left;
+	margin-left: 1.5em;
 	line-height: 0.5;
 	justify-content: center;
 }
-.header_left h1{
+
+.header_left h1 {
 	font-family: Georgia, 'Times New Roman', Times, serif;
 	font-size: 34px;
 }
+
 .header_left p {
 	font-size: 20px;
 }
-#apply{
+
+#apply {
 	margin-left: 2.5em;
 }
-.col-left{
+
+.col-left {
 	float: left;
-	width: 45%;
+	width: 40%;
 	margin-left: 1em;
 	font-size: 25px;
 }
-.col-right{
+
+.col-right {
 	float: right;
-	width: 50%;
+	width: 53%;
 	font-size: 25px;
-	background-color: red;
 }
-input{
-	width: 350px;
-    padding: 5px 10px;
-    margin: 8px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+
+input {
+	padding: 5px 10px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
 	box-sizing: border-box;
 	font-family: defaultFont;
 	font-size: 25px;
 	margin-left: 10px;
 }
-input:focus{
-    outline: none !important;
-    border-color: #fed42f;
-    box-shadow: 0 0 5px #fed42f;
+
+input:focus {
+	outline: none !important;
+	border-color: #fed42f;
+	box-shadow: 0 0 5px #fed42f;
 }
-.col-left table{
+
+.col-left input {
+	width: 350px;
+}
+
+.col-left table {
 	width: 100%;
-	padding: 10px;
 }
-.label{
+
+.label {
 	text-align: right;
 }
 
+#name_store {
+	width: 300px;
+}
+
+.label2 {
+	margin-left: 10px;
+}
+
+select {
+	color: #4a4a4a;
+	padding: 5px 10px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	font-family: defaultFont;
+	font-size: 25px;
+	margin-left: 10px;
+}
+
+select:focus {
+	outline: none;
+	border-color: #fed42f;
+	box-shadow: 0 0 5px #fed42f;
+}
+
+option:checked {
+	background-color: #ededed !important;
+}
+
+input[type=time] {
+	width: 125px;
+}
+.queue_type{
+	width: 220px;
+}
+.food_type{
+	width: 160px;
+	
+}
+.service_type{
+	width: 160px;
+}
+.col-3{
+	text-align: right;
+}
+.fill_num input{
+	width: 90px;
+}
+.btn_regis{
+	text-align: center;
+	clear: both;
+}
+.button{
+	border-radius: 10px;
+	width: 380px;
+	height: 65px;
+	text-align: center;
+	font-family: defaultFont;
+	font-size: 25px;
+	background-color:#fed42f; 
+    border: none;
+    color: white;
+    padding: 20px;
+    text-decoration: none;
+    display: inline-block;
+	cursor: pointer;
+	margin-top: 50px;
+}
+.button:hover{
+	background-color:#fece2f;
+}
