--- a/src/css/home.css
+++ b/src/css/home.css
@@ -11,6 +11,63 @@ body {
 	color: #4a4a4a;
 }
 
-
-
+.left-col{
+	float: left;
+	margin-top: 1.5em;
+	margin-left: 2em;
+	line-height: 0.2;
+}
+.left-col h1{
+	font-size: 32px;
+	font-weight: bold;
+}
+input {
+	padding: 5px 10px;
+	margin: 8px 0;
+	display: inline-block;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-sizing: border-box;
+	font-family: defaultFont;
+	font-size: 22px;
+}
+input:focus {
+	outline: none !important;
+	border-color: #fed42f;
+	box-shadow: 0 0 5px #fed42f;
+}
+#cust_name{
+	width: 220px;
+	height: 40px;
+}
+.add-button{
+	font-family: defaultFont;
+	width: 60px;
+	height: 40px;
+	background-color: #61dc7a;
+	color: #FFFFFF;
+	border: none;
+	cursor: pointer;
+	border-radius: 4px;
+	font-size: 25px;
+	text-align: center;
+}
+.show-list{
+	height: 40px;
+	width: 40px;
+	background: #fed42f;
+	border: none;
+	text-decoration: none;
+	display: inline-block;
+	border-radius: 4px;
+	cursor: pointer;
+	color: #FFFFFF;
+	font-family: defaultFont;
+	font-size: 25px;
+	text-align: center;
+}
+.add_name{
+	margin: 0 auto;
+	text-align: center;
+}
 
