--- a/src/css/home.css
+++ b/src/css/home.css
@@ -12,6 +12,7 @@ body {
 }
 .content{
 	width: 100%;
+	height: 100%;
 	margin: 2em;
 }
 
@@ -129,4 +130,20 @@ input:focus {
 #n_cust{
 	color: #d95252;
 	
+}
+.next_btn{
+	font-family: defaultFont;
+	width: 280px;
+	height: 90px;
+	background-color: #02bbaa;
+	color: #FFFFFF;
+	border: none;
+	cursor: pointer;
+	border-radius: 6px;
+	font-size: 65px;
+	text-align: center;
+	margin-top: 0.5em;
+}
+.call-next-btn{
+	text-align: center;
 }
