--- a/src/css/profile.css
+++ b/src/css/profile.css
@@ -10,22 +10,26 @@ body {
 	font-size: 20px;
 	color: #4a4a4a;
 }
+
 #profile {
 	margin-left: 2.5em;
-}
-label{
-	font-size: 25px;
 	
 }
-.bold{
+
+label {
+	font-size: 20px;
+}
+
+.bold {
 	font-weight: bold;
-	margin-right: 50px;
 }
-.col2{
-	margin-left: 60px;
+
+.col2 {
+	margin-left: 40px;
 }
-.edit_profile{
-	margin-left: 150px;
+
+.edit_profile {
+	margin-left: 100px;
 }
 
 input {
@@ -36,8 +40,9 @@ input {
 	border-radius: 4px;
 	box-sizing: border-box;
 	font-family: defaultFont;
-	font-size: 25px;
-	margin-left: 10px;
+	font-size: 20px;
+	margin-left: 40px;
+	height: 40px;
 }
 
 input:focus {
@@ -45,10 +50,27 @@ input:focus {
 	border-color: #fed42f;
 	box-shadow: 0 0 5px #fed42f;
 }
+
 input[type=time] {
-	width: 125px;
-	height: 45px;
+	width: 110px;
+	height: 40px;
 }
+
+input[type=number] {
+	width: 90px;
+	height: 40px;
+}
+
+input[type=email] {
+	width: 280px;
+	height: 40px;
+}
+
+input[type=tel] {
+	width: 280px;
+	height: 40px;
+}
+
 select {
 	color: #4a4a4a;
 	padding: 5px 10px;
@@ -58,18 +80,54 @@ select {
 	border-radius: 4px;
 	box-sizing: border-box;
 	font-family: defaultFont;
-	font-size: 25px;
-	margin-left: 10px;
+	font-size: 20px;
+	margin-left: 40px;
+	width: 180px;
+	height: 40px;
 }
+
 select:focus {
 	outline: none;
 	border-color: #fed42f;
 	box-shadow: 0 0 5px #fed42f;
 }
+
 option:checked {
 	background-color: #ededed !important;
 }
-select:disabled{
+
+select:disabled {
 	background: #f7f7f7;
 	color: #a7a7a7;
+}
+
+.col1 {
+	width: 150px;
+	text-align: right;
+}
+
+#name_store,
+#store_type {
+	margin-left: 40px;
+}
+.button{
+	border-radius: 8px;
+	width: 250px;
+	height: 55px;
+	text-align: center;
+	font-family: defaultFont;
+	font-size: 24px;
+	background-color:#FE9A2E; 
+    border: none;
+    color: white;
+    padding: 20px;
+    text-decoration: none;
+    display: inline-block;
+	cursor: pointer;
+	margin-top: 10px;
+	font-weight: bold;
+	margin-left: 40px;
+}
+.button:hover{
+	background-color:rgb(253, 149, 38);
 }
