--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -10,4 +10,19 @@ body {
 	font-size: 20px;
 	color: #4a4a4a;
 }
+.content{
+	width: 45%;
+	margin: 30px auto;
+	border: 1.5px solid #4a4a4a;
+	border-radius: 10px;
+}
+#contact{
+	margin-left: 20px;
+}
+.detail{
+	margin-left: 2.5em;
+	font-size: 25px;
+	margin-bottom: 30px;
+}
+
 
