--- a/src/css/home.css
+++ b/src/css/home.css
@@ -176,7 +176,7 @@ input:focus {
 .call-fill{
 	float: right;
 	margin-top: 20px;
-	display: none;
+
 }
 .call-fill h2{
 	line-height: 0;
@@ -186,11 +186,18 @@ input:focus {
 	position: relative;
 	width: 330px;
 	height: 35px;
-	border: 1px solid #4a4a4a;
+	border: 1px solid #ccc;
 	font-size: 25px;
 	text-align: center;
 	top: 10px;
 	display: none;
 	border-radius: 5px;
+	color: #4a4a4a;
 }
+#empty_name{
+	margin-bottom: 20px;
+	color: #d95252;
+	display: none;
+}
+
 
