--- a/src/css/home.css
+++ b/src/css/home.css
@@ -119,7 +119,6 @@ input:focus {
 	border-radius: 4px;
 	font-size: 25px;
 	text-align: center;
-
 }
 
 #num_q{
@@ -170,7 +169,7 @@ input:focus {
 	text-align: center;
 }
 #cust_num{
-	width: 155px;
+	width: 180px;
 	height: 35px;
 }
 .call-fill{
@@ -198,6 +197,50 @@ input:focus {
 	margin-bottom: 20px;
 	color: #d95252;
 	display: none;
+}
+#empty_num{
+	color: #d95252;
+}
+#each_call{
+	width: 160px;
+	padding: 0px 3px;
+	border: 1px solid #ccc;
+	font-size: 22px;
+	text-align: center;
+	border-radius: 5px;
+	color: #4a4a4a;
+	display: inline-block;
+	margin-right: 3px;
+}
+.recall_b{
+	font-family: defaultFont;
+	width: 70px;
+	height: 30px;
+	background-color: #f1912f;
+	color: #FFFFFF;
+	border: none;
+	cursor: pointer;
+	border-radius: 4px;
+	font-size: 22px;
+	text-align: center;
+}
+.show_call{
+	position: relative;
+	top: 10px;
+	display: none;
+	margin-bottom: 10px;
+}
+.cancle_b{
+	font-family: defaultFont;
+	width: 35px;
+	height: 30px;
+	background-color: #d95252;
+	color: #FFFFFF;
+	border: none;
+	cursor: pointer;
+	border-radius: 4px;
+	font-size: 22px;
+	text-align: center;
 }
 
 
